Refactor customer timestamp fields
